# backups

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
labs_src/: CMakeLists.txt
labs_src/lab3/: BackupJob.cpp  BackupJob.h  JobObject.cpp  JobObject.h  Repository.cpp  Repository.h  RestorePoint.cpp  RestorePoint.h  Storage.h  consolelog.cpp
labs_src/lab3/libzippp-master/lib/install/lib/: zip.lib
labs_src/libzippp-master/lib/install/lib/cmake/libzip/: libzip-config.cmake
labs_src/libzippp-master/lib/install/lib/pkgconfig/: libzip.pc
labs_src/libzippp-master/lib/install/share/pkgconfig/: zlib.pc
labs_tests/: CMakeLists.txt  lab3_tests.cpp
labs_tests/libzippp-master/lib/install/lib/: zlibstatic.lib
labs_tests/libzippp-master/lib/install/lib/cmake/libzip/: libzip-targets.cmake
labs_tests/libzippp-master/lib/zlib-1.2.12/: CMakeLists.txt
labs_tests/libzippp-master/libzip-1.8.0/: CMakeLists.txt
libzippp-master/: CMakeLists.txt
libzippp-master/lib/install/lib/: zlib.lib  zlibd.lib  zlibstaticd.lib
libzippp-master/lib/install/lib/cmake/libzip/: libzip-targets-debug.cmake  libzip-targets-release.cmake  libzip-targets.cmake
