cmake_minimum_required(VERSION 3.13)

project(ict-homework-3 LANGUAGES CXX)

# set the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# place binaries and libraries according to GNU standards
include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

# we cannot analyse results without gcov
find_program(GCOV_PATH gcov)
if(NOT GCOV_PATH)
  message(FATAL_ERROR "Code coverage analysis requires gcov!")
endif()

add_subdirectory(labs_src)
#подключение zip-библиотеки
#add_subdirectory(libzippp-master)
#include_directories(${libzippp_SOURCE_DIR}/src ${libzippp_SOURCE_DIR})

enable_testing()

add_subdirectory(labs_tests)

#add_library(libzippp SHARED libzippp.dll)
#link_directories(libzippp)
#target_link_libraries(ict-homework-3 LINK_PUBLIC zip)
#target_link_libraries(ict-homework-3 LINK_PUBLIC zlib)
#target_link_libraries(ict-homework-3 LINK_PUBLIC libzippp)